# RCT_STM32

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  RCT_STM32.ioc  RCT_STM32.txt  STM32F411CEUX_FLASH.ld  STM32F411CEUX_RAM.ld  STM32F411XX_FLASH.ld  build.ninja
Docs/: NOTE.md
Inc/: FreeRTOSConfig.h  freertos_tasks.h  gpio.h  main.h  sensors.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usbd_cdc_if.h
Inc/App/: dataFlash.h  pid.h  pid_cascade.h  pid_output.h  pid_parameters.h  pid_position.h  pid_speed.h  speedControl.h  turretStates.h
Inc/Backup/: FreeRTOSConfig.h.bak  main.h.bak  stm32f4xx_hal_conf.h.bak  stm32f4xx_it.h.bak  tim.h.bak  usbd_cdc_if.h.bak  usbd_conf.h.bak
Inc/ExternalModules/: bluetooth_XM_15B.h
Inc/ModbusRegisters/: NOTE.txt  reg_holding.h  reg_input.h
Inc/Sensors/: accelerometer.h  analog_sensors.h  encoders.h  sensors.h
Middlewares/FreeMODBUS/: CMakeLists.txt  mb.c
Middlewares/FreeMODBUS/ascii/: mbascii.c  mbascii.h
Middlewares/FreeMODBUS/include/: mb.h  mbconfig.h  mbport.h
Middlewares/FreeMODBUS/port/: port.h  portcritical.c  portcritical.h  portserial.c  porttimer.c
Middlewares/FreeMODBUS/rtu/: mbrtu.c  mbrtu.h
Middlewares/VESC_UART_Interface/: CMakeLists.txt
Scripts/: bluetooth_connect.sh
Src/: adc.c  dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  stm32f4xx_it.c  tim.c  usart.c  usbd_cdc_if.c  usbd_conf.c
Src/App/: dataFlash.c  pid.c  pid_cascade.c  pid_output.c  pid_position.c  pid_speed.c  speedControl.c  turretStates.c
Src/Backup/: adc.c.bak  freertos.c.bak  gpio.c.bak  i2c.c.bak  main.c.bak  stm32f4xx_it.c.bak  tim.c.bak
Src/ExternalModules/: bluetooth_XM_15B.c
Src/ModbusRegisters/: reg_holding.c  reg_input.c
Src/Sensors/: accelerometer.c  analog_sensors.c  encoders.c  sensors.c
cmake/stm32cubemx/: CMakeLists.txt
